[gd_scene load_steps=10 format=3 uid="uid://dgxcq4wnjolon"]

[ext_resource type="PackedScene" uid="uid://r5cpr0yi4ukk" path="res://scenes/Result3D.tscn" id="1_6jh3j"]
[ext_resource type="Script" uid="uid://bwfet135b151k" path="res://scenes/ResultUI.gd" id="1_7nurk"]
[ext_resource type="Texture2D" uid="uid://i6nt6wwqdq7s" path="res://assets/gui/result_buttons.png" id="2_t20r7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7nurk"]
atlas = ExtResource("2_t20r7")
region = Rect2(0, 320, 32, 32)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_7nurk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vh3gv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_26xlm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ib1ij"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t20r7"]
atlas = ExtResource("2_t20r7")
region = Rect2(32, 320, 32, 32)
margin = Rect2(32, 0, 0, 0)

[node name="ResultUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_7nurk")

[node name="ViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Subviewport" type="SubViewport" parent="ViewportContainer"]
own_world_3d = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Result3D" parent="ViewportContainer/Subviewport" instance=ExtResource("1_6jh3j")]

[node name="Screen" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Columns" type="HBoxContainer" parent="Screen"]
layout_mode = 2
mouse_filter = 2

[node name="Left" type="VBoxContainer" parent="Screen/Columns"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Bottom" type="MarginContainer" parent="Screen/Columns/Left"]
layout_mode = 2
size_flags_vertical = 10
mouse_filter = 2

[node name="Grid" type="GridContainer" parent="Screen/Columns/Left/Bottom"]
layout_mode = 2
mouse_filter = 2
columns = 4

[node name="PointTexture1" type="TextureRect" parent="Screen/Columns/Left/Bottom/Grid"]
layout_mode = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_7nurk")

[node name="PointSlider" type="HSlider" parent="Screen/Columns/Left/Bottom/Grid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1000000.0
value = 500000.0

[node name="PointTeller" type="HSlider" parent="Screen/Columns/Left/Bottom/Grid/PointSlider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
mouse_filter = 2
theme_override_icons/tick = SubResource("PlaceholderTexture2D_7nurk")
theme_override_styles/slider = SubResource("StyleBoxEmpty_vh3gv")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_26xlm")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_ib1ij")
max_value = 1000000.0
value = 200000.0
editable = false
scrollable = false

[node name="PointTexture2" type="TextureRect" parent="Screen/Columns/Left/Bottom/Grid"]
layout_mode = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_t20r7")

[node name="PointLineEdit" type="LineEdit" parent="Screen/Columns/Left/Bottom/Grid"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
placeholder_text = "123456789"
